prevented the name column from wrapping causing a greater height on small screens

--- a/src/components/Committee/styles.css
+++ b/src/components/Committee/styles.css
@@ -2,6 +2,10 @@
     cursor: pointer;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .header-background{
     background: black;
   }
