--- a/src/components/WitnessViewer/styles.css
+++ b/src/components/WitnessViewer/styles.css
@@ -2,6 +2,11 @@
     cursor: pointer;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
+
 .header-background{
     background: black;
   }
